count product shop owner
